[Fixes #11274467] Users with a long exclude list see the list bleed into search results

--- a/app/stylesheets/search.sass
+++ b/app/stylesheets/search.sass
@@ -23,7 +23,7 @@
 
 #results
   #summary
-    height: 30px
+    margin-bottom: 0.8em
 
   div.searchresult
     width: 620px
